--- a/examples.tsconfig.json
+++ b/examples.tsconfig.json
@@ -10,5 +10,5 @@
   },
   "lib": ["es2015"],
   "include": ["examples/**/*"],
-  "exclude": ["examples/**/input.jsx", "examples/todo-5.jsx"]
+  "exclude": ["examples/**/input.tsx", "examples/todo.tsx"]
 }
