--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/jsdom": "^16.2.4",
     "@types/node": "^14.11.10",
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "jsdom": "^16.4.0"
   }
 }
