--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsc && node dist",
     "test": "jest",
-    "ex": "tsc --p examples.tsconfig.json && cp examples/basic/index.html dist/basic/ && cp examples/conditions/index.html dist/conditions/"
+    "ex": "tsc --p examples.tsconfig.json && cp examples/basic/index.html dist/basic/ && cp examples/conditions/index.html dist/conditions/ && cp examples/collections/index.html dist/collections/"
   },
   "dependencies": {
     "typescript": "^4.0.3"
