--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "outDir": "dist"
   },
   "lib": ["es2015"],
-  "include": ["src/**/*"]
+  "exclude": ["test", "**/input.tsx", "examples/todo.tsx"]
 }
