--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "copy": "cp examples/index.html dist/index.html && cp examples/index.css dist/index.css",
     "build": "npm run rollup && npm run copy"
   },
+  "jest": {
+    "setupFilesAfterEnv": ["./jest-setup.js"]
+  },
   "dependencies": {
     "typescript": "^4.0.3"
   },
@@ -16,6 +19,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
     "@types/jsdom": "^16.2.4",
     "@types/node": "^14.11.10",
     "jest": "^26.6.0",
