--- a/packages/babel-plugin-jay/package.json
+++ b/packages/babel-plugin-jay/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-runtime",
+  "name": "babel-plugin-jay",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,17 @@
     "copy": "cp examples/index.html dist/index.html && cp examples/index.css dist/index.css",
     "build": "npm run rollup && npm run copy"
   },
-  "jest": {
-    "setupFilesAfterEnv": ["./jest-setup.js"]
-  },
   "dependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/types": "^7.12.13",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@types/jsdom": "^16.2.4",
     "@types/node": "^14.11.10",
+    "babel-plugin-tester": "^10.0.0",
     "jest": "^26.6.0",
-    "jsdom": "^16.4.0",
-    "rollup": "^2.35.1",
     "tslib": "^2.0.3"
   }
 }
