--- a/packages/babel-plugin-jay/package.json
+++ b/packages/babel-plugin-jay/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
+    "@babel/plugin-syntax-typescript": "^7.12.13",
     "@babel/types": "^7.12.13",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/node": "^14.11.10",
-    "babel-plugin-tester": "^10.0.0",
     "jest": "^26.6.0",
     "tslib": "^2.0.3"
   }
