--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@caiogondim/strip-margin": "^1.0.0",
     "@types/node": "^14.11.10",
     "jest": "^26.6.0",
     "typescript": "^4.0.3"
