--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "change-case": "^4.1.2",
     "js-yaml": "^4.0.0",
     "node-html-parser": "^2.1.0",
     "tslib": "^2.0.3"
