--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,20 +1,21 @@
 {
   "name": "jay-runtime",
   "version": "1.0.0",
+  "main": "dist/element",
   "scripts": {
     "start": "tsc",
     "test": "jest",
     "rollup": "rollup --config ./rollup.config.js",
-    "copy": "cp examples/index.html dist/index.html && cp examples/index.css dist/index.css",
-    "build": "npm run rollup && npm run copy"
+    "copy": "cp examples/index.html build/index.html && cp examples/index.css build/index.css",
+    "build": "npm run rollup && npm run copy && echo 'build lib' && tsc && echo 'build examples' && tsc -p tsconfig-examples.json"
   },
   "jest": {
     "setupFilesAfterEnv": ["./jest-setup.js"]
   },
   "dependencies": {
-    "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "typescript": "^4.0.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-typescript": "^8.1.0",
