--- a/packages/runtime/tsconfig-examples.json
+++ b/packages/runtime/tsconfig-examples.json
@@ -6,12 +6,12 @@
     "target": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist",
+    "outDir": "build",
     "lib": [
       "es2016",
       "dom"
     ]
   },
   "lib": ["es2015"],
-  "exclude": ["test", "examples"]
+  "exclude": ["test","**/input.tsx", "examples/todo.tsx"]
 }
