--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -25,6 +25,7 @@
     "@caiogondim/strip-margin": "^1.0.0",
     "@types/node": "^14.11.10",
     "jest": "^26.6.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "jay-runtime": "1.0.0"
   }
 }
