--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -18,6 +18,7 @@
     "js-yaml": "^4.0.0",
     "node-html-parser": "^2.1.0",
     "pegjs": "^0.10.0",
+    "pluralize": "^8.0.0",
     "tslib": "^2.0.3"
   },
   "devDependencies": {
