basics of a rollup plugin

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -2,7 +2,7 @@
   "name": "jay-compiler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/compiler.js",
   "directories": {
     "example": "examples",
     "lib": "lib"
