--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -6,7 +6,8 @@
     "target": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true
   },
   "lib": ["es2015"],
   "exclude": ["examples", "test"]
