rollup plugin works, but outputs TS file

--- a/packages/rollup-plugin/tsconfig.json
+++ b/packages/rollup-plugin/tsconfig.json
@@ -10,8 +10,9 @@
     "lib": [
       "ES2019",
       "dom"
-    ]
+    ],
+    "declaration": true
   },
   "lib": ["es2015"],
-  "exclude": ["test", "examples"]
+  "exclude": ["test", "examples", "dist"]
 }
