--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -12,10 +12,10 @@
     ]
   },
   "dependencies": {
-    "jay-compiler": "1.0.0"
+    "jay-compiler": "1.0.0",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.0.3",
     "@types/node": "^14.11.10",
     "jest": "^26.6.0",
     "rollup": "^2.35.1",
