--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -7,11 +7,9 @@
     "sourceMap": true,
     "outDir": "dist",
     "lib": [
-      "ES2019",
-      "dom"
-    ],
-    "declaration": true
+      "es2019"
+    ]
   },
   "lib": ["es2015"],
-  "exclude": ["test", "examples", "dist"]
+  "exclude": ["test"]
 }
