--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -10,7 +10,8 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "declaration": true
   },
   "lib": ["es2015"],
   "exclude": ["test", "examples"]
