added doc 02 - runtime some type optimizations for runtime

--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -14,5 +14,5 @@
     "declaration": true
   },
   "lib": ["es2015"],
-  "exclude": ["test", "examples"]
+  "exclude": ["test", "examples", "dist", "build"]
 }
