--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -10,12 +10,12 @@
     "build": "npm run rollup && npm run copy && echo 'build lib' && tsc && echo 'build examples' && tsc -p tsconfig-examples.json"
   },
   "jest": {
-    "setupFilesAfterEnv": ["./jest-setup.js"]
+    "setupFilesAfterEnv": [
+      "./jest-setup.js"
+    ]
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "^4.0.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-typescript": "^8.1.0",
@@ -25,6 +25,8 @@
     "jest": "^26.6.0",
     "jsdom": "^16.4.0",
     "rollup": "^2.35.1",
-    "tslib": "^2.0.3"
+    "ts-jest": "^26.5.6",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   }
 }
