--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@types/jsdom": "^16.2.10",
     "@types/node": "^14.17.0",
+    "@types/testing-library__jest-dom": "^5.14.0",
     "jest": "^26.6.3",
     "jsdom": "^16.5.3",
     "rollup": "^2.48.0",
