updated fixtures of compiler with changes in runtime updated test utils with a matcher that ignores whitespace

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -11,6 +11,11 @@
     "test": "pegjs --allowed-start-rules start,condition,accessor,Identifier lib/parse-expressions.pegjs && jest",
     "build": "pegjs --allowed-start-rules start,condition,accessor,Identifier lib/parse-expressions.pegjs && tsc"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./jest-setup.js"
+    ]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
