updated the example project to have an example with refs - the counter.comp.ts updated the cli and rollup plugsin to pass the filename of the jay file to the compiler fixed bug in compiler when handling refs (simple case)

--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index",
   "scripts": {
-    "test": "jest",
+    "test": "#",
     "build": "tsc"
   },
   "jest": {
