working on todo example, to make the full example work. Still work in progress

--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "copy": "cp lib/index.html dist/index.html && cp lib/index.css dist/index.css",
+    "copy": "cp lib/index.html dist/index.html && cp lib/*.css dist/",
     "build": "npm run d && npm run rollup && npm run copy"
   },
   "dependencies": {
