renamed the state module to component

--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
     "packages/project",
     "packages/rollup-plugin",
     "packages/cli",
-    "packages/state",
+    "packages/component",
     "packages/reactive",
     "exploration"
   ],
