--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -25,6 +25,7 @@
     "@types/jsdom": "^16.2.10",
     "@types/node": "^14.17.0",
     "@types/testing-library__jest-dom": "^5.14.0",
+    "caniuse-lite": "^1.0.30001282",
     "jest": "^26.6.3",
     "jsdom": "^16.5.3",
     "rollup": "^2.48.0",
