--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -9,7 +9,8 @@
     "build": "npm run d && npm run rollup && npm run copy"
   },
   "dependencies": {
-    "jay-runtime": "1.0.0"
+    "jay-runtime": "1.0.0",
+    "jay-reactive": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
