--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "copy": "cp lib/index.html dist/index.html && cp lib/*.css dist/",
-    "build": "npm run d && npm run rollup && npm run copy"
+    "build": "npm run d && npm run rollup"
   },
   "dependencies": {
     "jay-component": "1.0.0",
@@ -20,6 +19,7 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "jay-cli": "1.0.0",
     "rollup": "^2.35.1",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-jay": "1.0.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
