--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ build
 package-lock.json
 /packages/compiler/lib/parse-expressions.js
 lerna-debug.log
-packages/project/lib/**/*.d.ts
+examples/lib/**/*.d.ts
