--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"scripts": {
 		"test": "lerna run test",
 		"link": "lerna run link",
+		"build": "lerna run build",
 		"release": "echo \"======= Lerna Releasing jay =======\" && npm run test && lerna publish"
 	},
 	"devDependencies": {
