--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"test": "lerna run test",
-		"link": "lerna run link",
+		"link": "lerna link",
 		"build": "lerna run build",
 		"release": "echo \"======= Lerna Releasing jay =======\" && npm run test && lerna publish"
 	},
