--- a/examples/package.json
+++ b/examples/package.json
@@ -13,6 +13,7 @@
     "jay-reactive": "1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-node-resolve": "^11.2.0",
@@ -21,6 +22,7 @@
     "rollup": "^2.35.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-jay": "1.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   }
