split the examples folder to separate project per example

--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,11 @@
     "packages/runtime",
     "packages/compiler",
     "examples",
+    "examples/counter",
+    "examples/counter-raw",
+    "examples/mini-benchmark",
+    "examples/todo",
+    "examples/todo-raw",
     "packages/rollup-plugin",
     "packages/cli",
     "packages/component",
