new example for todo using a sub component

--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
     "examples/counter-raw",
     "examples/mini-benchmark",
     "examples/todo",
+    "examples/todo-components",
     "examples/todo-raw",
     "packages/rollup-plugin",
     "packages/cli",
