--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,8 +9,9 @@
     "build": "tsc"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
-    "jay-compiler": "1.0.0"
+    "chalk": "^4.1.2",
+    "jay-compiler": "1.0.0",
+    "commander": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.10",
