--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
+    "runtime": "node node_modules/jay-cli/dist/index.js runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
     "build": "npm run d && npm run rollup"
   },
