--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
-    "runtime": "node node_modules/jay-cli/dist/index.js runtime ./lib ./build",
+    "runtime": "node node_modules/jay-cli/dist/index.js runtime ./lib ./build/main",
     "rollup": "rollup --config ./rollup.config.js",
     "build": "npm run d && npm run rollup"
   },
