--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -25,15 +25,17 @@
     "node-html-parser": "^2.1.0",
     "pegjs": "^0.10.0",
     "pluralize": "^8.0.0",
-    "typescript": "^4.0.3",
-    "tslib": "^2.0.3"
+    "ts-morph": "^13.0.3",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@caiogondim/strip-margin": "^1.0.0",
     "@types/node": "^14.11.10",
-    "jest": "^26.6.0",
+    "jay-component": "1.0.0",
     "jay-runtime": "1.0.0",
-    "jay-component": "1.0.0"
+    "jest": "^26.6.0"
   }
 }
