--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jay-runtime",
   "version": "1.0.0",
-  "main": "dist/element",
+  "main": "dist/index",
   "scripts": {
     "start": "tsc",
     "test": "jest",
@@ -20,17 +20,19 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-typescript": "^7.13.0",
+    "@jest/types": "^28.1.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.2.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@types/jsdom": "^16.2.10",
     "@types/node": "^14.17.0",
     "@types/testing-library__jest-dom": "^5.14.0",
-    "caniuse-lite": "^1.0.30001282",
+    "caniuse-lite": "^1.0.30001363",
     "jest": "^26.6.3",
     "jsdom": "^16.5.3",
     "rollup": "^2.48.0",
     "ts-jest": "^26.5.6",
+    "ts-node": "^10.8.2",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
