--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2019",
     "moduleResolution": "node",
     "sourceMap": true,
+    "rootDir": "lib",
     "outDir": "dist",
     "declaration": true
   },
