--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/element",
   "scripts": {
+    "d": "node node_modules/jay-cli/dist/index.js definitions ./test/basic/regular",
     "start": "tsc",
     "test": "jest",
     "build": "tsc"
@@ -24,6 +25,7 @@
     "@types/node": "^14.18.23",
     "@types/testing-library__jest-dom": "^5.14.5",
     "caniuse-lite": "^1.0.30001374",
+    "jay-cli": "1.0.0",
     "jest": "^26.6.3",
     "jsdom": "^16.5.3",
     "ts-jest": "^26.5.6",
