--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "dist/element",
   "scripts": {
-    "d": "node node_modules/jay-cli/dist/index.js definitions ./test/regular/source",
-    "jay": "node node_modules/jay-cli/dist/index.js runtime ./test/regular/source",
+    "d-basic": "node node_modules/jay-cli/dist/index.js definitions ./test/basic/regular",
+    "jay-basic": "node node_modules/jay-cli/dist/index.js runtime ./test/basic/regular",
+    "d-counter": "node node_modules/jay-cli/dist/index.js definitions ./test/counter-checking-events/regular",
+    "jay-counter": "node node_modules/jay-cli/dist/index.js runtime ./test/counter-checking-events/regular",
+    "d": "npm run d-basic & num run d-counter",
+    "jay": "npm run jay-basic & num run jay-counter",
     "start": "tsc",
     "test": "jest",
     "build": "tsc"
