--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "jay-runtime": "1.0.0",
-    "jay-component": "1.0.0"
+    "jay-component": "1.0.0",
+    "jay-reactive": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
