--- a/packages/secure/tsconfig.json
+++ b/packages/secure/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es2019",
     "moduleResolution": "node",
     "sourceMap": true,
+    "rootDir": "./lib",
     "outDir": "dist",
     "lib": [
       "es2019",
