--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -9,8 +9,10 @@
     "jay-events-basic": "node node_modules/jay-cli/dist/index.js runtime test/events-basic/regular",
     "d-events-synthetic": "node node_modules/jay-cli/dist/index.js definitions test/events-synthetic/regular",
     "jay-events-synthetic": "node node_modules/jay-cli/dist/index.js runtime test/events-synthetic/regular",
-    "d": "npm run d-basic & num run d-events-basic & npm run d-events-synthetic",
-    "jay": "npm run jay-basic & num run jay-events-basic & npm run jay-events-synthetic",
+    "d-tree": "node node_modules/jay-cli/dist/index.js definitions test/tree/regular",
+    "jay-tree": "node node_modules/jay-cli/dist/index.js runtime test/tree/regular",
+    "d": "npm run d-basic & num run d-events-basic & npm run d-events-synthetic & npm run d-tree",
+    "jay": "npm run jay-basic & num run jay-events-basic & npm run jay-events-synthetic & npm run jay-tree",
     "start": "tsc",
     "test": "jest",
     "build": "tsc"
