--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -11,8 +11,10 @@
     "jay-events-synthetic": "node node_modules/jay-cli/dist/index.js runtime test/events-synthetic/regular",
     "d-tree": "node node_modules/jay-cli/dist/index.js definitions test/tree/regular",
     "jay-tree": "node node_modules/jay-cli/dist/index.js runtime test/tree/regular",
-    "d": "npm run d-basic & npm run d-events-basic & npm run d-events-synthetic & npm run d-tree",
-    "jay": "npm run jay-basic & npm run jay-events-basic & npm run jay-events-synthetic & npm run jay-tree",
+    "d-top-level-collection-conditions": "node node_modules/jay-cli/dist/index.js definitions test/top-level-collection-conditions/regular",
+    "jay-top-level-collection-conditions": "node node_modules/jay-cli/dist/index.js runtime test/top-level-collection-conditions/regular",
+    "d": "npm run d-basic & npm run d-events-basic & npm run d-events-synthetic & npm run d-tree % npm run d-top-level-collection-conditions",
+    "jay": "npm run jay-basic & npm run jay-events-basic & npm run jay-events-synthetic & npm run jay-tree & npm run jay-top-level-collection-conditions",
     "start": "tsc",
     "test": "jest",
     "build": "tsc"
