completed the exploration of message channel and extracted HandshakeMessageJayChannel to secure package

--- a/lerna.json
+++ b/lerna.json
@@ -15,7 +15,8 @@
     "packages/component",
     "packages/reactive",
     "packages/secure",
-    "exploration"
+    "exploration",
+    "exploration/message-comm-channel"
   ],
   "version": "1.0.0"
 }
