new example for counter working as a secure component

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,7 @@
     "examples",
     "examples/counter",
     "examples/counter-raw",
+    "examples/counter-secure",
     "examples/mini-benchmark",
     "examples/todo",
     "examples/todo-components",
