--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jay-secure",
   "version": "1.0.0",
-  "main": "dist/element",
+  "main": "dist/index",
   "scripts": {
     "d-basic": "node node_modules/jay-cli/dist/index.js definitions ./test/basic/regular",
     "jay-basic": "node node_modules/jay-cli/dist/index.js runtime ./test/basic/regular",
