--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
-    "runtime": "node node_modules/jay-cli/dist/index.js runtime ./lib",
+    "jay": "node node_modules/jay-cli/dist/index.js runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
-    "build": "npm run d && npm run rollup"
+    "build": "npm run d && npm run rollup",
+    "mk-secure": "npm run jay && mv ./lib/item.jay.html.ts ./lib-secure/main && mv ./lib/todo.jay.html.ts ./lib-secure/main && cp ./lib/item.ts ./lib-secure/sandbox && cp ./lib/todo.ts ./lib-secure/sandbox && cp ./lib/uuid.ts ./lib-secure/sandbox"
   },
   "dependencies": {
     "jay-component": "1.0.0",
     "jay-runtime": "1.0.0",
-    "jay-reactive": "1.0.3"
+    "jay-reactive": "1.0.3",
+    "jay-secure": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
