refactored reactive into 3 packages - reactive, mutable and serialization

--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jay-component": "1.0.0",
+    "jay-mutable": "1.0.0",
     "jay-runtime": "1.0.0",
     "jay-reactive": "1.0.4"
   },
