--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "jay-component": "1.0.0",
+    "jay-mutable": "1.0.0",
     "jay-runtime": "1.0.0",
     "jay-reactive": "1.0.4",
     "jay-secure": "1.0.0"
