--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,8 @@
     "packages/component",
     "packages/reactive",
     "packages/secure",
+    "packages/mutable",
+    "packages/serialization",
     "exploration",
     "exploration/message-comm-channel"
   ],
