--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "jay-runtime": "1.0.0",
     "jay-component": "1.0.0",
-    "jay-reactive": "1.0.4"
+    "jay-reactive": "1.0.4",
+    "jay-serialization": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
@@ -42,6 +43,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "caniuse-lite": "^1.0.30001374",
     "jay-cli": "1.0.0",
+    "jay-mutable": "1.0.0",
     "jest": "^26.6.3",
     "jsdom": "^16.5.3",
     "ts-jest": "^26.5.6",
