--- a/packages/serialization/package.json
+++ b/packages/serialization/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "jay-component",
+  "name": "jay-serialization",
   "version": "1.0.0",
-  "main": "dist/component.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "tsc",
     "test": "jest",
     "build": "tsc"
   },
   "jest": {},
+  "files": [
+    "dist",
+    "lib"
+  ],
   "dependencies": {
     "jay-reactive": "1.0.4",
     "jay-mutable": "1.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/node": "^14.17.0",
-    "jay-runtime": "1.0.0",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^14.18.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
