--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -15,7 +15,8 @@
     ]
   },
   "dependencies": {
-    "jay-reactive": "1.0.4"
+    "jay-reactive": "1.0.4",
+    "jay-list-compare": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
