create jsx jay examples for discussion

--- a/packages/jaysx/tsconfig.json
+++ b/packages/jaysx/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
     "jsx": "react",
-    "jsxFactory": "Jay.createElement"
-
+    "jsxFactory": "Jay.createElement",
+"jsxFragmentFactory": "Jay.Fragment",
+"resolveJsonModule": true,
+"esModuleInterop": true
     }
 }
