--- a/packages/mutable/package.json
+++ b/packages/mutable/package.json
@@ -12,7 +12,8 @@
     "dist"
   ],
   "dependencies": {
-    "jay-reactive": "1.0.4"
+    "jay-reactive": "1.0.4",
+    "jay-mutable-contract": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
