--- a/packages/reactive/package.json
+++ b/packages/reactive/package.json
@@ -12,6 +12,9 @@
     "dist",
     "lib"
   ],
+  "dependencies": {
+    "jay-mutable-contract": "1.0.0"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
