--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -32,6 +32,7 @@
     "jay-runtime": "1.0.0",
     "jay-component": "1.0.0",
     "jay-reactive": "1.0.4",
+    "jay-mutable-contract": "1.0.0",
     "jay-serialization": "1.0.0"
   },
   "devDependencies": {
