--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -10,7 +10,8 @@
   "jest": {},
   "dependencies": {
     "jay-reactive": "1.0.4",
-    "jay-mutable": "1.0.0"
+    "jay-mutable": "1.0.0",
+    "jay-mutable-contract": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.2",
