jest run to support structuredClone while running in CLI. for some reason, adding `jest --runInBand` solves the problem

--- a/packages/mutable/package.json
+++ b/packages/mutable/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc",
-    "test": "jest",
+    "test": "jest --runInBand",
     "build": "tsc"
   },
   "jest": {},
