--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "jay-component": "1.0.0",
     "jay-mutable": "1.0.0",
+    "jay-mutable-contract": "1.0.0",
     "jay-runtime": "1.0.0",
     "jay-reactive": "1.0.4",
-    "jay-secure": "1.0.0"
+    "jay-secure": "1.0.0",
+    "jay-serialization": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
