--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "jay-component": "1.0.0",
-    "jay-mutable": "1.0.0",
     "jay-runtime": "1.0.0",
-    "jay-reactive": "1.0.4"
+    "jay-reactive": "1.0.4",
+    "jay-serialization": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
