split mutable-contract to deprecated and json-patch

--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "immer": "^10.0.2",
     "jay-component": "1.0.0",
-    "jay-mutable-contract": "1.0.0",
+    "jay-json-patch": "1.0.0",
     "jay-serialization": "1.0.0",
     "jay-runtime": "1.0.0",
     "jay-reactive": "1.0.4",
