--- a/packages/json-patch/package.json
+++ b/packages/json-patch/package.json
@@ -4,12 +4,16 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"start": "tsc",
-		"build": "tsc"
+		"build": "tsc",
+		"test": "jest --runInBand"
 	},
 	"jest": {},
 	"files": [
 		"dist"
 	],
+	"dependencies": {
+		"jay-list-compare": "1.0.0"
+	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.18.10",
 		"@babel/preset-typescript": "^7.18.6",
