--- a/packages/serialization/package.json
+++ b/packages/serialization/package.json
@@ -14,8 +14,7 @@
   ],
   "dependencies": {
     "jay-reactive": "1.0.4",
-    "jay-json-patch": "1.0.0",
-    "jay-list-compare": "1.0.0"
+    "jay-json-patch": "1.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
