--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -17,8 +17,8 @@
     "jay-tree": "node node_modules/jay-cli/dist/index.js runtime test/tree/regular",
     "d-top-level-collection-conditions": "node node_modules/jay-cli/dist/index.js definitions test/top-level-collection-conditions/regular",
     "jay-top-level-collection-conditions": "node node_modules/jay-cli/dist/index.js runtime test/top-level-collection-conditions/regular",
-    "d": "npm run d-basic & npm run d-events-basic & npm run d-events-synthetic & npm run d-tree % npm run d-top-level-collection-conditions & npm run d-exec-synthetic",
-    "jay": "npm run jay-basic & npm run jay-events-basic & npm run jay-events-synthetic & npm run jay-tree & npm run jay-top-level-collection-conditions & npm run jay-exec-synthetic",
+    "d": "npm run d-basic & npm run d-events-basic & npm run d-events-synthetic & npm run d-tree % npm run d-top-level-collection-conditions & npm run d-exec-synthetic & npm run d-",
+    "jay": "npm run jay-basic & npm run jay-events-basic & npm run jay-events-synthetic & npm run jay-tree & npm run jay-top-level-collection-conditions & npm run jay-exec-synthetic & npm run jay-comp-in-comp",
     "start": "tsc",
     "test": "jest --runInBand",
     "build": "tsc"
