--- a/examples/scrum-board/package.json
+++ b/examples/scrum-board/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "d": "node node_modules/jay-cli/dist/index.js definitions ./lib",
+    "clean": "rm -rf ./lib/*.d.ts",
     "jay": "node node_modules/jay-cli/dist/index.js runtime ./lib",
     "rollup": "rollup --config ./rollup.config.js",
     "build": "npm run d && npm run rollup",
