--- a/exploration/message-comm-channel/package.json
+++ b/exploration/message-comm-channel/package.json
@@ -13,5 +13,11 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "rollup": "^2.77.2"
+  },
+  "dependencies": {
+    "jay-component": "1.0.0",
+    "jay-runtime": "1.0.0",
+    "jay-reactive": "1.0.4",
+    "jay-secure": "1.0.0"
   }
 }
